# IjkCmake

./: README.md  gradle.properties
app/: build.gradle
app/src/androidTest/java/com/max/ijkcmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ijkplayer/: CMakeLists.txt
app/src/main/cpp/ijkplayer/android-ndk-prof/: CMakeLists.txt
app/src/main/cpp/ijkplayer/ijkavformat/: ijkioapplication.h
app/src/main/cpp/ijkplayer/ijksdl/: CMakeLists.txt
app/src/main/cpp/ijkplayer/ijksdl/dummy/: ijksdl_vout_dummy.c  ijksdl_vout_dummy.h
app/src/main/cpp/ijkplayer/ijksdl/ffmpeg/: ijksdl_vout_overlay_ffmpeg.c
app/src/main/cpp/ijkplayer/ijksdl/ffmpeg/abi_all/: image_convert.c
app/src/main/cpp/ijkplayer/ijksdl/ijkj4a/: CMakeLists.txt
app/src/main/cpp/ijkplayer/ijksdl/ijkyuv/: CMakeLists.txt
app/src/main/cpp/ijkplayer/ijksdl/ijkyuv/unit_test/: basictypes_test.cc  cpu_test.cc  rotate_argb_test.cc  rotate_test.cc  unit_test.cc  version_test.cc  video_common_test.cc
app/src/main/cpp/ijkplayer/ijksdl/ijkyuv/util/: ssim.cc
app/src/main/cpp/ijkplayer/ijksoundtouch/: CMakeLists.txt  ijksoundtouch_wrap.cpp
app/src/main/java/com/max/ijkcmake/player/: ijkUseMainActivity.java
app/src/main/res/layout/: activity_ijk_use_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/max/ijkcmake/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ijkplayer-java/: build.gradle
ijkplayer-java/src/main/java/tv/danmaku/ijk/media/player/widget/media/: MeasureHelper.java
ijkplayer-java/src/main/res/values/: strings.xml
